--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
     </style>
   </head>
   <body>
-    <script type="module" src="./src/main.ts"></script>
+    <script type="module" src="./src/main_debug.ts"></script>
   </body>
 </html>
